fix info message page overflow

--- a/Component/UI/Info/Info.module.css
+++ b/Component/UI/Info/Info.module.css
@@ -2,7 +2,7 @@
 
 .container {
   font-size: 1.6rem;
-  width: 50rem;
+  width: 50%;
   margin: 25% auto;
   height: auto;
   color: #fa5252;
